sandbox/output
AnagramTest.java:9: error: cannot find symbol
        assertThat(Anagrams.of("a"), is(Arrays.asList("a")));
                   ^
  symbol:   variable Anagrams
  location: class AnagramTest
AnagramTest.java:9: error: cannot find symbol
        assertThat(Anagrams.of("a"), is(Arrays.asList("a")));
                                        ^
  symbol:   variable Arrays
  location: class AnagramTest
2 errors
